# django-indieweb

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  client.py  environment.yml  example_project.py  postactivate  pyproject.toml  pytest.ini  release.txt  requirements-test.txt  requirements.txt  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  test_webmention.py  test_webmention_interactive.md  tox.ini
docs/: api.rst  changelog.rst  changelog.txt  concepts.rst  conf.py  configuration.rst  development.rst  h-card.rst  index.rst  index.txt  indieauth.rst  indieweb.migrations.rst  indieweb.rst  installation.rst  micropub.rst  modules.rst  requirements.txt  tutorial.rst  usage.rst  webmention.rst
docs/_static/: custom.css  mermaid-init.js
examples/: custom_consent_template.html
indieweb/: __init__.py  models.py  urls.py  views.py
indieweb/migrations/: 0001_initial.py  0002_auto_20190512_0612.py  0003_auto_20190518_0207.py  0004_alter_auth_id_alter_token_id.py
src/indieweb/: __init__.py  admin.py  h_card.py  handlers.py  handlers_example.py  interfaces.py  models.py  processors.py  senders.py  urls.py  views.py
src/indieweb/management/commands/: send_webmentions.py
src/indieweb/migrations/: 0001_initial.py  0002_alter_auth_state.py  0002_auto_20190512_0612.py  0003_auto_20190518_0207.py  0004_alter_auth_id_alter_token_id.py  0005_alter_auth_created_alter_auth_modified_and_more.py  0006_merge_20250628_1513.py  0007_alter_token_me.py  0008_webmention.py  0009_profile.py
src/indieweb/static/css/: webmentions.css
src/indieweb/templates/indieweb/: consent.html  h-card.html  webmentions.html  webmentions_example.html
src/indieweb/templates/indieweb/webmention_types/: like.html  mention.html  reply.html  repost.html
src/indieweb/templatetags/: __init__.py  indieweb_tags.py  webmention_tags.py
tests/: settings.py  test_admin.py  test_admin_json_widget.py  test_auth_endpoint.py  test_consent_screen.py  test_h_card.py  test_h_card_extra_classes.py  test_h_card_integration.py  test_h_card_templatetags.py  test_micropub_create.py  test_micropub_endpoint.py  test_models.py  test_profile_admin.py  test_profile_models.py  test_send_webmentions_command.py  test_token_endpoint.py  test_webmention_endpoint.py  test_webmention_interfaces.py  test_webmention_models.py  test_webmention_processor.py  test_webmention_sender.py  test_webmention_templatetags.py  urls.py
