[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-indieweb"
authors = [
    {name = "Jochen Wersdörfer", email = "jochen-indieweb@wersdoerfer.de"},
]
dynamic = ["version", "description"]
requires-python = ">=3.9"
keywords = [
    "indieweb",
    "indieauth",
    "micropub",
    "django",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Framework :: Django",
    "License :: OSI Approved :: BSD License",
    "Topic :: Internet",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "Django",
    "django-model-utils",
    "django-braces",
    "pytz",
]

[project.optional-dependencies]
test = [
    "django-environ",
    "pytest >= 6",
    "pytest-cov >= 3",
    "pytest-django",
]
doc = [
    "sphinx-rtd-theme",
]
dev = [
    "black",
    "flake8",
    "isort",
    "requests",
    "tox",
]

[project.urls]
Documentation = "https://django-indieweb.readthedocs.io/en/latest/"
Source = "https://github.com/ephes/django-indieweb"

[tool.flit.module]
name = "indieweb"

[tool.isort]
profile = "black"

[tool.black]
line-length = 119

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango50Warning",
    "ignore::DeprecationWarning",
]
