[build-system]
requires = ["uv_build>=0.7.8,<0.8.0"]
build-backend = "uv_build"

[project]
name = "django-indieweb"
authors = [
    {name = "Jochen Wersdörfer", email = "jochen-indieweb@wersdoerfer.de"},
]
version = "0.4.0"
description = "includes indieauth, micropub, and webmention endpoints"
requires-python = ">=3.10"
keywords = [
    "indieweb",
    "indieauth",
    "micropub",
    "webmention",
    "django",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Framework :: Django",
    "License :: OSI Approved :: BSD License",
    "Topic :: Internet",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "Django",
    "django-model-utils",
    "mf2py",
    "beautifulsoup4",
    "httpx",
]

[dependency-groups]
dev = [
    "django-environ",
    "django-stubs[compatible-mypy]",
    "furo",
    "mypy",
    "pre-commit",
    "pytest >= 6",
    "pytest-cov >= 3",
    "pytest-django",
    "ruff",
    "requests",
    "tox",
    "types-requests",
]

[project.urls]
Documentation = "https://django-indieweb.readthedocs.io/en/latest/"
Source = "https://github.com/ephes/django-indieweb"

[tool.uv.build-backend]
module-name = "indieweb"

[tool.ruff]
line-length = 119
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C90",  # mccabe
    "UP",   # pyupgrade
    "DJ",   # flake8-django
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
    "ignore::django.utils.deprecation.RemovedInDjango60Warning",
    "ignore::DeprecationWarning",
]
addopts = [
    "--reuse-db",
    "--no-migrations",
    "--cov-config=pyproject.toml",
]
norecursedirs = [
    ".git",
    "docs",
]

[tool.coverage.run]
source = ["src/indieweb"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
    "*/settings.py",
    "*/wsgi.py",
    "*/asgi.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
files = ["src/indieweb"]
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "environ"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mf2py"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "indieweb.handlers_example"
ignore_errors = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "tests.settings"
